edit index and products templates, change psycopg2-binary to psycopg2 in requirements

--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -10,8 +10,8 @@
                     <h1 class="font-weight-bold title">Explore The World</h1>
                 {% else %}
                     <h1 class="font-weight-bold title">Be the first explorer and upload the first post</h1>
-                    <br>
-                    <img style="margin-left: 140px" src="{% static 'img/globe.jpeg' %}" alt="">
+                    <br><br><br><br><br>
+                    <img style="margin-left: 200px" src="{% static 'img/globe.jpeg' %}" width=400px height=250px alt="">
                 {% endif %}
                 <div class="row">
                     <nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2">
