--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -66,7 +66,7 @@
         {% else %}
             <h1>Coming soon</h1>
             <br><br><br>
-            <img src="{% static 'img/gifts.webp' %}" width=600px height=300px
+            <img src="{% static 'img/gifts.png' %}" width=600px height=300px
                  alt="">
             <br><br><br>
         {% endif %}
