--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -11,7 +11,7 @@
                 {% else %}
                     <h1 class="font-weight-bold title">Be the first explorer and upload the first post</h1>
                     <br><br><br><br><br>
-                    <img src="{% static 'img/globe.jpeg' %}" width=400px height=250px alt="">
+                    <img src="{% static 'img/globe.jpeg' %}" alt="">
                 {% endif %}
                 <div class="row">
                     <nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2">
