--- a/templates/posts/post_category.html
+++ b/templates/posts/post_category.html
@@ -3,8 +3,8 @@
 {% block page_content %}
     <section class="mt-4 mb-5">
         <div class="container mb-4">
-            <h1 class="font-weight-bold title">All posts from {{ category.title }}</h1>
-            <div class="row">
+            <div class="row-centered">
+                <h1 class="font-weight-bold title">All posts from {{ category.title }}</h1>
                 <nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2">
                     <div class="collapse navbar-collapse" id="navbarsExplore">
                         <ul class="navbar-nav">
