--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -3,66 +3,66 @@
 {% load cache %}
 
 {% block page_content %}
-    {#    {% cache 360 index %}#}
-    <section class="mt-4 mb-5">
-        <div class="container mb-4">
-            <div class="row-centered">
-                {% if posts %}
-                    <h1 class="font-weight-bold title">Explore The World</h1>
-                {% else %}
-                    <h1 class="font-weight-bold title">Be the first explorer<br>Upload your journey</h1>
-                    <br><br>
-                    <img src="{% static 'img/globe.jpeg' %}" height="300px" alt="">
-                {% endif %}
-            </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2">
-                <div class="collapse navbar-collapse" id="navbarsExplore">
-                    {% if categories and posts %}
-                        <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'index' %}">All</a>
-                        </li>
-                        {% for category in categories %}
-                            <li class="nav-item">
-                                <a class="nav-link"
-                                   href="{% url 'post category' slug=category.slug %}">{{ category.title }}
-                                </a>
-                            </li>
-                        {% endfor %}
+    {% cache 360 index %}
+        <section class="mt-4 mb-5">
+            <div class="container mb-4">
+                <div class="row-centered">
+                    {% if posts %}
+                        <h1 class="font-weight-bold title">Explore The World</h1>
+                    {% else %}
+                        <h1 class="font-weight-bold title">Be the first explorer<br>Upload your journey</h1>
+                        <br><br>
+                        <img src="{% static 'img/globe.jpeg' %}" height="300px" alt="">
                     {% endif %}
-                    </ul>
                 </div>
-            </nav>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="card-columns">
-                    {% for post in posts %}
-                        <div class="card card-pin">
-                            <img class="card-img" src="{{ post.photo.url }}" alt="Card image">
-                            <div class="overlay">
-                                <div class="more">
-                                    {% if request.user.is_authenticated %}
-                                        <b>{{ post.title }}</b>
-                                        <br>
-                                        <a href="{% url 'post details' pk=post.pk %}">
+                <nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2">
+                    <div class="collapse navbar-collapse" id="navbarsExplore">
+                        {% if categories and posts %}
+                            <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'index' %}">All</a>
+                            </li>
+                            {% for category in categories %}
+                                <li class="nav-item">
+                                    <a class="nav-link"
+                                       href="{% url 'post category' slug=category.slug %}">{{ category.title }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        {% endif %}
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="card-columns">
+                        {% for post in posts %}
+                            <div class="card card-pin">
+                                <img class="card-img" src="{{ post.photo.url }}" alt="Card image">
+                                <div class="overlay">
+                                    <div class="more">
+                                        {% if request.user.is_authenticated %}
+                                            <b>{{ post.title }}</b>
+                                            <br>
+                                            <a href="{% url 'post details' pk=post.pk %}">
+                                                <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
+                                                More
+                                            </a>
+                                        {% else %}
                                             <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
-                                            More
-                                        </a>
-                                    {% else %}
-                                        <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
-                                        Log in to see post details
-                                    {% endif %}
+                                            Log in to see post details
+                                        {% endif %}
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    {% endfor %}
+                        {% endfor %}
+                    </div>
                 </div>
+                {% block pagination %}
+                    {% include 'common/pagination.html' %}
+                {% endblock %}
             </div>
-            {% block pagination %}
-                {% include 'common/pagination.html' %}
-            {% endblock %}
-        </div>
-    </section>
-    {#    {% endcache %}#}
+        </section>
+    {% endcache %}
 {% endblock %}
