Add template caching

--- a/templates/common/contact.html
+++ b/templates/common/contact.html
@@ -16,7 +16,7 @@
                     </p>
                 </form>
             </div>
-            {% cache contact 360 %}
+            {% cache 360 contact %}
                 <div class="col-md-7">
                     <img src="{% static 'img/contact.png' %}" alt="">
                 </div>
