--- a/templates/posts/post_category.html
+++ b/templates/posts/post_category.html
@@ -7,7 +7,7 @@
                 <h1 class="font-weight-bold title">All posts from {{ category.title }}</h1>
                 <nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2">
                     <div class="collapse navbar-collapse" id="navbarsExplore">
-                        {% if categories and posts %}
+                        {% if categories %}
                             <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'index' %}">All</a>
