--- a/templates/posts/post_category.html
+++ b/templates/posts/post_category.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load static %}
 
 {% block page_content %}
     <section class="mt-4 mb-5">
@@ -27,28 +28,37 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="card-columns">
-                    {% for post in posts %}
-                        <div class="card card-pin">
-                            <img class="card-img" src="{{ post.photo.url }}" alt="Card image">
-                            <div class="overlay">
-                                <div class="more">
-                                    {% if request.user.is_authenticated %}
-                                        <b>{{ post.title }}</b>
-                                        <br>
-                                        <a href="{% url 'post details' pk=post.pk %}">
+                {% if posts %}
+                    <div class="card-columns">
+                        {% for post in posts %}
+                            <div class="card card-pin">
+                                <img class="card-img" src="{{ post.photo.url }}" alt="Card image">
+                                <div class="overlay">
+                                    <div class="more">
+                                        {% if request.user.is_authenticated %}
+                                            <b>{{ post.title }}</b>
+                                            <br>
+                                            <a href="{% url 'post details' pk=post.pk %}">
+                                                <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
+                                                More
+                                            </a>
+                                        {% else %}
                                             <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
-                                            More
-                                        </a>
-                                    {% else %}
-                                        <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
-                                        Log in to see post details
-                                    {% endif %}
+                                            Log in to see post details
+                                        {% endif %}
+                                    </div>
                                 </div>
                             </div>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    <div class="container-fluid" align="center">
+                        <div class="row-centered">
+                            <br>
+                            <img src="{% static 'img/no_posts.png' %}" height="300px" alt="">
                         </div>
-                    {% endfor %}
-                </div>
+                    </div>
+                {% endif %}
             </div>
             {% block pagination %}
                 {% include 'common/pagination.html' %}
