--- a/templates/posts/post_category.html
+++ b/templates/posts/post_category.html
@@ -6,7 +6,7 @@
         <div class="container mb-4">
             <div class="row-centered">
                 <h1 class="font-weight-bold title">All posts from {{ category.title }}</h1>
-                <nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2">
+                <nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2" style="margin-left: 150px">
                     <div class="collapse navbar-collapse" id="navbarsExplore">
                         {% if categories %}
                             <ul class="navbar-nav">
