Prevent resubmitting of forms

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -79,6 +79,7 @@
 {% endblock %}
 <script src="{% static 'js/app.js' %}"></script>
 <script src="{% static 'js/theme.js' %}"></script>
+<script src="{% static 'js/disable_button_on_submit.js' %}"></script>
 <footer class="footer pt-5 pb-5 text-center">
     <div class="container">
         <div class="socials-media">
