--- a/templates/common/contact.html
+++ b/templates/common/contact.html
@@ -9,11 +9,11 @@
         <h1>Contact Us</h1>
         <div class="row">
             <div class="col-md-5">
-                <form action="{% url 'contact' %}" method="POST" id="contact_form">
+                <form id="form" action="{% url 'contact' %}" method="POST" id="contact_form">
                     {{ form.as_p }}
                     {% csrf_token %}
                     <p>
-                        <button type="submit" class="btn btn-secondary">Submit</button>
+                        <button id="submit" type="submit" class="btn btn-secondary">Submit</button>
                     </p>
                 </form>
             </div>
