--- a/templates/products/add_product.html
+++ b/templates/products/add_product.html
@@ -7,11 +7,11 @@
         <h1>Add product</h1>
         <div class="row">
             <div class="col-md-5">
-                <form action="{% url 'add product' %}" method="POST" enctype="multipart/form-data">
+                <form id="form" action="{% url 'add product' %}" method="POST" enctype="multipart/form-data">
                     {{ form.as_p }}
                     {% csrf_token %}
                     <p>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button id="submit" type="submit" class="btn btn-primary">Submit</button>
                         <a href="{% url 'all products' %}" class="btn btn-secondary">Go Back</a>
                     </p>
                 </form>
