--- a/templates/products/edit_product.html
+++ b/templates/products/edit_product.html
@@ -10,11 +10,11 @@
             </div>
             <div class="col-md-7" align="justify">
                 <br><br>
-                <form action="{% url 'edit product' pk=product.pk %}" method="post">
+                <form id="form" action="{% url 'edit product' pk=product.pk %}" method="post">
                     {{ form.as_p }}
                     {% csrf_token %}
                     <p>
-                        <button type="submit" class="btn btn-primary">Edit Product</button>
+                        <button id="submit" type="submit" class="btn btn-primary">Edit Product</button>
                         <a href="{% url 'all products' %}" class="btn btn-secondary">Go Back</a>
                     </p>
                 </form>
