--- a/templates/profiles/register.html
+++ b/templates/profiles/register.html
@@ -7,10 +7,10 @@
         <div class="row">
             <div class="col-md-5">
                 <br> <br> <br>
-                <form action="" method="POST">
+                <form id="form" action="" method="POST">
                     {{ form.as_p }}
                     <p>
-                        <button type="submit" class="btn btn-secondary">Register</button>
+                        <button id="submit" type="submit" class="btn btn-secondary">Register</button>
                     </p>
                     {% csrf_token %}
                 </form>
